fix: Resolver problemas de seguridad y monitoreo

--- a/Pep3/LAB-TBD/pom.xml
+++ b/Pep3/LAB-TBD/pom.xml
@@ -193,6 +193,7 @@
             <phase>verify</phase> <!-- Ejecuta automáticamente al hacer mvn verify -->
             <goals>
               <goal>spotbugs</goal>
+              <goal>html</goal>
             </goals>
           </execution>
         </executions>
