--- a/Pep3/LAB-TBD/src/main/resources/application-docker.properties
+++ b/Pep3/LAB-TBD/src/main/resources/application-docker.properties
@@ -24,4 +24,8 @@ management.metrics.tags.application = ${spring.application.name}
 # Logging configuration para Docker
 logging.level.org.springframework.web = INFO
 logging.level.G1TBD.LABTBD = INFO
-logging.level.org.springframework.boot.autoconfigure = WARN 
+logging.level.org.springframework.boot.autoconfigure = WARN
+
+# Spring Security Configuration para Docker
+spring.security.user.name = admin
+spring.security.user.password = admin 
