--- a/Pep3/LAB-TBD/pom.xml
+++ b/Pep3/LAB-TBD/pom.xml
@@ -187,7 +187,7 @@
       <plugin>
         <groupId>com.github.spotbugs</groupId>
         <artifactId>spotbugs-maven-plugin</artifactId>
-        <version>4.7.3.0</version>
+        <version>4.5.3.0</version>
         <executions>
           <execution>
             <phase>verify</phase> <!-- Ejecuta automáticamente al hacer mvn verify -->
@@ -200,25 +200,10 @@
           <effort>Max</effort>
           <threshold>Low</threshold>
           <xmlOutput>true</xmlOutput>
+          <htmlOutput>true</htmlOutput>
           <outputDirectory>${project.build.directory}</outputDirectory>
           <failOnError>false</failOnError> <!-- No detiene el build si hay bugs -->
           <includeTests>false</includeTests>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>com.github.spotbugs</groupId>
-        <artifactId>spotbugs-html</artifactId>
-        <version>4.7.3.0</version>
-        <executions>
-          <execution>
-            <phase>verify</phase>
-            <goals>
-              <goal>html</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <outputDirectory>${project.build.directory}/spotbugs-html</outputDirectory>
         </configuration>
       </plugin>
     </plugins>
