--- a/Pep3/LAB-TBD/pom.xml
+++ b/Pep3/LAB-TBD/pom.xml
@@ -124,6 +124,11 @@
       <version>5.9.0</version> <!-- Updated JUnit Jupiter version -->
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
